--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "@splidejs/react-splide": "^0.7.12",
+    "axios": "^1.6.0",
     "firebase": "^10.5.0",
+    "flutterwave-react-v3": "^1.3.0",
     "i18next": "^23.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
