--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "@splidejs/react-splide": "^0.7.12",
     "axios": "^1.6.0",
+    "embla-carousel-react": "^8.0.0-rc14",
     "firebase": "^10.5.0",
     "flutterwave-react-v3": "^1.3.0",
     "i18next": "^23.6.0",
