--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^13.3.1",
+    "react-toastify": "^9.1.3",
     "swiper": "^10.3.1",
     "uuid": "^9.0.1"
   },
